# invoices-codex

./: .env.example  Makefile  README.md  Tiltfile  report.json  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
apps/workers-py/: alembic.ini  pyproject.toml  requirements.txt
apps/workers-py/migrations/: README  env.py  script.py.mako
apps/workers-py/migrations/versions/: 20260308_0001_init_saas_schema.py  20260311_0002_auth_sessions_schema.py  20260311_0003_provider_configs.py
apps/workers-py/scripts/: saas_api_entrypoint.sh
apps/workers-py/src/invplatform/adapters/: base.py
apps/workers-py/src/invplatform/cli/: gmail_invoice_finder.py  graph_invoice_finder.py  invoices_report.py  monthly_invoices.py  saas_api.py  saas_cleanup.py  saas_enqueue_cleanup.py  saas_openapi_export.py  saas_rq_worker.py  saas_worker.py
apps/workers-py/src/invplatform/saas/: __init__.py  api.py  auth.py  db.py  metrics.py  models.py  queue.py  repository.py  service.py  storage.py  tasks.py  worker.py
apps/workers-py/src/invplatform/usecases/: __init__.py  duplicate_policy.py  fetch_invoices.py  pdf_download.py  pdf_verification.py  provider_browser.py  provider_runner.py  provider_shared.py  report_io.py  report_municipal.py  report_parser.py  report_partner.py  report_pipeline.py  report_splitter.py  report_totals.py  report_vendor_strategies.py
apps/workers-py/src/workers.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: ARCHITECTURE.md  ARCHITECTURE_REVIEW_POLICY.md  CONTRIBUTING.md  FRONTEND_CONVERSION_BACKLOG.md  FRONTEND_DAY0_ORION_BOOTSTRAP.md  (+20 more)
(+151 files in other folders)
