[project]
name = "workers"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "alembic",
  "boto3",
  "fastapi",
  "python-multipart",
  "httpx",
  "pydantic>=2",
  "redis",
  "rq",
  "sqlalchemy",
  "tenacity",
  "python-dotenv",
  "ruff",
  "mypy",
  "pytest",
  "pytest-cov",
  "coverage",
  "uvicorn",
  "pdfminer.six",
  "pypdf",
  "rapidfuzz"
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["src"]
